--- a/WordPuzzle/Views/Home/Index.cshtml
+++ b/WordPuzzle/Views/Home/Index.cshtml
@@ -4,4 +4,4 @@
 
 <h1>Welcome to Word Hurdle!</h1>
 <h3><a href='/game'>View Game History</a></h3>
-<h3><a href='/game/new'>Start New Game?</a></h3>
+<h3><a href='/game' method="post">Start New Game?</a></h3>
