--- a/WordPuzzle/Views/Game/Index.cshtml
+++ b/WordPuzzle/Views/Game/Index.cshtml
@@ -2,20 +2,27 @@
   Layout = "_Layout";
 }
 @using WordPuzzle.Models;
+@using System.Linq;
+@using System.Collections.Generic;
+@using System;
 
 <h1> It's Hurdlin' Time!</h1>
 
-@* @if (@Model.Count == 0)
+@if (@Game.GetAll().Count == 0)
 {
   <h3>No Game Loaded!</h3>
   <p><a href="/">Reload from Home</a></p>
-} *@
+}
 
 <div>
-  @* <form action="">
-    @foreach (Char char  in Words.AllWords)
-    <label for="first-letter">1</label>
-    <input id="letter" name="first-letter" type="text"> *@
+  <form action="/game/guess/new" method="post">
+    <input name="gameId" type="hidden" value="@Game.GetAll().Last().Id">
+    @for (int i = 0; i < Model.Comparator.Length; i++)
+    {
+    <label for="letter"></label>
+    <input id="letter" name="letter" type="text">
+    }
+  <button type="submit">Check my answer</button>
 
   </form>
 </div>
